--- a/assets/scss/_contents.scss
+++ b/assets/scss/_contents.scss
@@ -106,6 +106,7 @@
     }
   }
   &_item {
+    overflow: visible;
     gap: 74px;
     @media (max-width: 1200px) {
       gap: 24px;
@@ -133,6 +134,16 @@
       }
       .button {
         margin: 20px 0 0 auto;
+      }
+    }
+    &.align-items-start {
+      align-items: flex-start !important;
+      .item_image {
+        position: sticky;
+        top: 20px;
+        @media (max-width: 1200px) {
+          position: static;
+        }
       }
     }
     .section_title {
