--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,6 +13,8 @@
 @import "consult";
 @import "modal";
 
+@import "analytics_page";
+
 *,
 h1,
 h2,
@@ -29,6 +31,9 @@ li,
 p {
   padding: 0;
   margin: 0;
+}
+a{
+  text-decoration: none;
 }
 body {
   font-family: "Inter";
