--- a/assets/scss/_analytics_page.scss
+++ b/assets/scss/_analytics_page.scss
@@ -59,6 +59,240 @@
         font-style: normal;
         font-weight: 700;
       }
+      .link_btn {
+        color: #2b72f4;
+        font-size: 24px;
+        font-weight: 700;
+        text-decoration: none;
+      }
+      .seo_price_item_bottom li {
+        border: 0;
+        &:last-child {
+          width: 100%;
+          max-width: 310px;
+        }
+        a.button {
+          width: 100%;
+          justify-content: center;
+          text-align: center;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 600;
+        }
+      }
+    }
+    .seo_price_subinfo {
+      gap: 20px;
+      li {
+        border: 0;
+      }
+    }
+  }
+  .seo_audit__columns {
+    border-radius: 23px;
+    background: #fff;
+    box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+    padding: 20px;
+    .seo_audit__block {
+      background: transparent;
+      box-shadow: 0 0 0 transparent;
+      padding: 0;
+    }
+  }
+  .seo_analysis {
+    background: url(../images/bg_analiysc.png) no-repeat center;
+    background-size: 100% 100%;
+    .container {
+    }
+  }
+  .analytics_page_items {
+    gap: 32px;
+  }
+  .analytics_page_item {
+    padding: 20px;
+    border-radius: 23px;
+    background: #fff;
+    box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+  }
+  .online_site_items {
+    justify-content: space-between;
+    .online_site_item {
+      gap: 0px;
+      width: calc(33.33% - 10px);
+      border-radius: 23px;
+      background: #f1f5f9;
+      .site_banner {
+        background: url(../images/banner_mobile.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
+        max-width: 100%;
+      }
+      .site_info {
+        padding: 20px 20px 32px;
+        .site_info_title {
+          margin-top: 0;
+        }
+      }
+    }
+  }
+  .advantanges {
+    padding: 80px 0;
+    .advantanges_items {
+      padding-top: 50px;
+    }
+    .advantange_item {
+      width: calc(25% - 10px);
+      color: #222529;
+      .advantange_item_info {
+        margin-top: 20px;
+      }
+      .advantange_item_title {
+        color: #222529;
+        text-align: center;
+        font-size: 21px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        padding-bottom: 20px;
+      }
+      p:last-child {
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+      }
+    }
+  }
+  .comments {
+    margin-top: 0;
+    padding-top: 50px;
+    background: url(../images/comment_bg.png) no-repeat center;
+    background-size: 100% 100%;
+    .comments_item_top_content {
+      margin-bottom: 0 !important;
+    }
+    .comments_item:nth-child(2),
+    .comments_item:nth-child(4),
+    .comments_item:nth-child(6) {
+      margin-top: 0;
+    }
+
+    .comments_items {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      position: relative;
+      padding-top: 50px;
+      gap: 20px 0;
+    }
+    .comments_item {
+      width: calc(50% - 10px);
+      gap: 32px;
+      .date {
+        margin-top: 0;
+      }
+      &:first-child {
+        width: calc(42% - 10px);
+        min-height: 568px;
+      }
+      &:nth-child(2),
+      &:nth-child(3) {
+        width: calc(58% - 10px);
+        height: fit-content;
+        gap: 32px;
+        right: 0;
+        .date {
+          margin-top: 0;
+        }
+      }
+      &:nth-child(3) {
+        position: absolute;
+      }
+    }
+
+    // /* Barcha kartochkalar */
+    // .comments_item {
+    //   border-radius: 23px;
+    //   background: #fff;
+    //   box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+    //   padding: 32px;
+    //   font-family: sans-serif;
+    //   font-size: 16px;
+    //   line-height: 1.5;
+    //   width: 100%;
+    // }
+
+    // .comments_item:nth-child(4) {
+    //   grid-column: 2 / 3; /* o‘rta ustun */
+    //   grid-row: 2;
+    // }
+    // .comments_item:nth-child(5) {
+    //   grid-column: 3 / 4; /* oxirgi ustun */
+    //   grid-row: 2;
+    // }
+
+    .comments_item_top_content {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 16px;
+    }
+
+    .comments_item_top_info h3 {
+      font-size: 18px;
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .stars {
+      display: flex;
+      gap: 4px;
+    }
+
+    .stars img {
+      width: 18px;
+      height: 18px;
+    }
+
+    .comments_item_top_text {
+      font-size: 16px;
+      line-height: 1.5;
+      color: #333;
+    }
+
+    .date {
+      margin-top: 32px;
+      font-size: 14px;
+      color: #222529;
+    }
+  }
+  .faq {
+    padding-top: 0;
+    background: url(../images/bg_faq.png) no-repeat center, -1200px;
+    background-size: 100% 100%;
+    .section_title {
+      max-width: 702px;
+      margin: 0 auto;
+    }
+    &_items {
+      padding: 0;
+      border-radius: 0;
+      box-shadow: 0 0 transparent;
+      background: transparent;
+    }
+    &_item {
+      padding: 20px;
+      border-radius: 23px;
+      background: #fff;
+      box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+    }
+  }
+  .consult {
+    .container {
+      padding: 32px;
+    }
+    input {
     }
   }
 }
