--- a/assets/scss/bootstrapadd.scss
+++ b/assets/scss/bootstrapadd.scss
@@ -374,9 +374,8 @@
   text-align: right;
 }
 .text-left {
-  text-align: left;
-} 
+  text-align: left !important;
+}
 .text-white {
   color: #fff !important;
 }
-
