--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -89,13 +89,25 @@ body {
   line-height: normal;
   display: block;
   width: fit-content;
-  text-decoration: none;
+  text-decoration: none !important;
+  transition: all .2s linear;
   &.no_bg {
     border-radius: 100px;
     border: 1px solid #2b72f4;
     background: #fff;
     color: #2b72f4;
     text-align: center;
+
+    &:hover{
+      color:#fff;
+      background-color: #2b72f4;
+    }
+  }
+  &:hover{
+
+    color:#2b72f4;
+    background-color: #fff;
+    border: 1px solid #2b72f4;
   }
 }
 .blue {
