--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,6 +61,10 @@
   height: 46px;
   padding: 13px 20px;
   outline: none;
+  color: #222529;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
 }
 @media (max-width: 768px) {
   .hero_form .button {
