--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -49,6 +49,10 @@
       height: 46px;
       padding: 13px 20px;
       outline: none;
+      color: #222529;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
     }
     .button {
       @media (max-width: 768px) {
