--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -55,6 +55,19 @@
       font-weight: 400;
     }
     .button {
+      &:hover {
+        background: #2b72f4;
+        outline: none;
+        color: #fff;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        display: block;
+        width: fit-content;
+        text-decoration: none !important;
+        border-color: transparent;
+      }
       @media (max-width: 768px) {
         width: 100%;
       }
