--- a/assets/scss/_analytics_page.scss
+++ b/assets/scss/_analytics_page.scss
@@ -467,8 +467,10 @@
           text-align: center;
         }
       }
-      .container{
-        
+      .container {
+        @media (max-width: 768px) {
+          padding: 20px;
+        }
       }
     }
   }
