--- a/assets/scss/_analytics_page.scss
+++ b/assets/scss/_analytics_page.scss
@@ -166,6 +166,11 @@
         }
       }
     }
+    .section_description {
+      margin: 0 auto;
+      margin-top: 20px;
+      max-width: 800px;
+    }
   }
   .analytics_page_items {
     gap: 32px;
