--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -77,6 +77,7 @@
         border-radius: 100px;
         border: 1px solid #eaeaea;
         margin-top: 32px;
+        align-items: center;
       }
     }
   }
