--- a/assets/scss/_rewiev.scss
+++ b/assets/scss/_rewiev.scss
@@ -3,15 +3,20 @@
     padding: 40px 0;
     .container {
       gap: 140px;
+      @media (max-width: 1090px) {
+        gap: 32px;
+      }
     }
-    h2 {
+    h2.hero_left {
       color: #fff;
       font-size: 40px;
       font-style: normal;
       font-weight: 600;
       line-height: normal;
-      br {
-        @media (max-width: 1090px) {
+      width: fit-content;
+      flex: 0 0 auto;
+      @media (max-width: 1090px) {
+        br {
           display: none;
         }
       }
