--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1916,6 +1916,12 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
+  color: #fff;
+  border: 1px solid transparent;
+}
+.analytics_page .seo_price .seo_price_item .seo_price_item_bottom li a.button:hover {
+  color: #2b72f4;
+  border-color: #2b72f4;
 }
 .analytics_page .seo_price .seo_price_subinfo {
   gap: 20px;
@@ -2289,6 +2295,196 @@
   .rewiev .hero h2.hero_left br {
     display: none;
   }
+}
+.rewiev .seo_score_content {
+  width: calc(100% - 290px);
+}
+.rewiev .seo_score_content .seo_score_block {
+  margin-top: 32px;
+  width: 100%;
+}
+.rewiev .seo_score_content .seo_score_banner {
+  padding: 10px 20px;
+  border-radius: 22px;
+  background: linear-gradient(241deg, #2b72f4 -2.57%, #19428e 73.63%);
+}
+.rewiev .seo_score_content .seo_score_banner .section_title {
+  color: #fff;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.rewiev .seo_score_content .seo_score_block_title {
+  margin-top: 32px;
+}
+.rewiev .seo_score_content .seo_score_items {
+  gap: 32px;
+  margin-top: 32px;
+}
+.rewiev .seo_score_content .seo_score_item {
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.08);
+}
+.rewiev .seo_score_content_top {
+  margin-top: 31px;
+  gap: 82px;
+}
+.rewiev .seo_score_component {
+  gap: 80px;
+}
+.rewiev .seo_score_component .top_content {
+  width: 100%;
+}
+.rewiev .seo_score_component .top_content span {
+  color: #8e939a;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  gap: 12px;
+}
+.rewiev .progress_link {
+  color: #8e939a;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.rewiev .progress_lists {
+  gap: 30px;
+  margin-top: 20px;
+}
+.rewiev .progress_lists li {
+  gap: 30px;
+  color: #222529;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.rewiev .progress_lists li span {
+  gap: 12px;
+}
+.rewiev .progress_lists li .progressbar {
+  height: 13px;
+  background: #eaeaea;
+  flex: 0 0 auto;
+  border-radius: 12px;
+}
+.rewiev .progress_lists li .progressbar_thumb {
+  height: 100%;
+  border-radius: 12px;
+  display: block;
+}
+.rewiev .btn_lists_title {
+  color: #8e939a;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.rewiev .btn_lists {
+  gap: 20px;
+  margin-top: 32px;
+  list-style: none;
+}
+.rewiev .btn_lists a {
+  border-radius: 100px;
+  border: 1px solid #8e939a;
+  display: flex;
+  padding: 12px 50px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color: #8e939a;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.rewiev .seo_score_content_left {
+  padding: 20px 38px 14px;
+  border-radius: 23px;
+  background: #fff;
+  box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.08);
+}
+.rewiev .seo_score_content_left .seo_circle {
+  position: relative;
+  width: 285px;
+  height: 285px;
+  border-radius: 50%;
+  background: conic-gradient(#3a8df3 0deg, #9f44e5 183.6deg, #e0e0e0 183.6deg, #e0e0e0 360deg);
+  transform: rotate(-90deg); /* Gradientni yuqoridan boshlatish uchun */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.rewiev .seo_score_content_left .seo_circle .seo_inner {
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transform: rotate(90deg);
+}
+.rewiev .seo_score_content_left .seo_circle .seo_inner .score {
+  color: #2b72f4;
+  text-align: center;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.rewiev .seo_score_content_left .seo_circle .seo_inner .label {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  margin-top: 12px;
+  color: #8e939a;
+}
+.rewiev .seo_score_content_left .seo_sircle_body {
+  color: #222529;
+}
+.rewiev .seo_score_content_left .seo_sircle_body .seo_sircle_title {
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 38px;
+}
+.rewiev .seo_score_content_left .seo_sircle_body p {
+  color: #222529;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 20px;
+}
+.rewiev .seo_score_content_left .seo_sircle_body .price {
+  color: #2b72f4;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 20px;
+}
+.rewiev .seo_score_content_left .seo_sircle_body .button {
+  width: 100%;
+  max-width: 100%;
+  margin-top: 30px;
+  text-align: center;
+}
+.rewiev .seo_score_content_left .seo_sircle_body .button.no_bg {
+  margin-top: 20px;
 }
 
 .seo_score {
