--- a/assets/scss/_analytics_page.scss
+++ b/assets/scss/_analytics_page.scss
@@ -1,5 +1,4 @@
 .analytics_page {
-  
   .hero {
     padding: 230px 0;
     @media (max-width: 768px) {
@@ -136,6 +135,12 @@
           font-size: 16px;
           font-style: normal;
           font-weight: 600;
+          color: #fff;
+          border: 1px solid transparent;
+          &:hover {
+            color: #2b72f4;
+            border-color: #2b72f4;
+          }
         }
       }
     }
