--- a/assets/scss/_rewiev.scss
+++ b/assets/scss/_rewiev.scss
@@ -22,4 +22,200 @@
       }
     }
   }
+  .seo_score_content {
+    width: calc(100% - 290px);
+    .seo_score_block {
+      margin-top: 32px;
+      width: 100%;
+    }
+    .seo_score_banner {
+      padding: 10px 20px;
+      border-radius: 22px;
+      background: linear-gradient(241deg, #2b72f4 -2.57%, #19428e 73.63%);
+      .section_title {
+        color: #fff;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+    }
+    .seo_score_block_title {
+      margin-top: 32px;
+    }
+    .seo_score_items {
+      gap: 32px;
+      margin-top: 32px;
+    }
+    .seo_score_item {
+      border-radius: 20px;
+      background: #fff;
+      box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.08);
+    }
+  }
+  .seo_score_content_top {
+    margin-top: 31px;
+    gap: 82px;
+  }
+  .seo_score_component {
+    gap: 80px;
+    .top_content {
+      width: 100%;
+      span {
+        color: #8e939a;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        gap: 12px;
+      }
+    }
+  }
+  .progress_link {
+    color: #8e939a;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+  .progress_lists {
+    gap: 30px;
+    margin-top: 20px;
+    li {
+      gap: 30px;
+      color: #222529;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      span {
+        gap: 12px;
+      }
+      .progressbar {
+        height: 13px;
+        background: #eaeaea;
+        flex: 0 0 auto;
+        border-radius: 12px;
+        &_thumb {
+          height: 100%;
+          border-radius: 12px;
+          display: block;
+        }
+      }
+    }
+  }
+  .btn_lists_title {
+    color: #8e939a;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+  .btn_lists {
+    gap: 20px;
+    margin-top: 32px;
+    list-style: none;
+    a {
+      border-radius: 100px;
+      border: 1px solid #8e939a;
+      display: flex;
+      padding: 12px 50px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      text-decoration: none;
+      color: #8e939a;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+    }
+  }
+  .seo_score_content_left {
+    padding: 20px 38px 14px;
+    border-radius: 23px;
+    background: #fff;
+    box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.08);
+    .seo_circle {
+      position: relative;
+      width: 285px;
+      height: 285px;
+      border-radius: 50%;
+      background: conic-gradient(
+        #3a8df3 0deg,
+        #9f44e5 183.6deg,
+        #e0e0e0 183.6deg,
+        #e0e0e0 360deg
+      );
+      transform: rotate(-90deg); /* Gradientni yuqoridan boshlatish uchun */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .seo_inner {
+        position: absolute;
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
+        background: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        transform: rotate(90deg);
+        .score {
+          color: #2b72f4;
+          text-align: center;
+          font-size: 48px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+        .label {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          margin-top: 12px;
+          color: #8e939a;
+        }
+      }
+    }
+    .seo_sircle_body {
+      color: #222529;
+      .seo_sircle_title {
+        text-align: center;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        margin-top: 38px;
+      }
+      p {
+        color: #222529;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-top: 20px;
+      }
+      .price {
+        color: #2b72f4;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        margin-top: 20px;
+      }
+      .button {
+        width: 100%;
+        max-width: 100%;
+        margin-top: 30px;
+        text-align: center;
+        &.no_bg {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
 }
